webroot/style.css
@media (max-width: 1029px ) {
    #pickLocHeader, #show_map, #hide_map{
        display: none;
    }
}

@media (min-width: 1030px){
    #mobileSearch{
        display: none;
    }
}


#map {
    padding: 5px 5px;
    height: 400px;
}

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Maven Pro', Arial, Helvetica, sans-serif;
    background-color: #F0F8FF;
    color: black;
}

body {
    padding-top: 60px;
}

#floating-panel {
    background-color: #24292e;
    z-index: 5;
    text-align: center;
    font-family: 'Maven Pro', 'sans-serif';
    line-height: 30px;
    padding: 5px 5px 10px 5px;
    margin-top: 25px;
}

main {
    background-color: #f2f2f2;
    margin: 0 5% 0 5%;
    padding: 15px;
    box-shadow: 0px 0px 15px #1e2327;
    margin-bottom: 2%;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    overflow: hidden;
}

input#address, input#submit {
    text-align: center;
    font-family: Verdana, sans-serif;;
    font-size: 14px;
    border-radius: 5px;
    width: 80%;
}

input#submit {
    background-color: #24292e;
    color: #c8c9cb;
    font-weight: bold;
    border: 2px solid #c8c9cb;
    margin-top: 5px;
    text-align: center;
    text-decoration: none;
    -webkit-transition-duration: 0.4s; /* Safari */
    transition-duration: 0.4s;
    cursor: pointer;
}

input#submit:hover {
    background-color: #008CBA;
    color: white;
}

#header {
    background-image: url("./assets/seattle.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: top center;
    text-align: center;
    padding-top: 3%;
    height: 140px;
    width: 100%;
    border-bottom: 5px solid #1e2327;
    color: black;
}

#header h1 {
    width: 30%;
    margin-left: auto;
    margin-right: auto;
    border-radius: 5px;
    margin-top: 10px;
    background-color: #24292e;
    color: white;
    opacity: 0.8;
    font-weight: 500;
    font-size: 50px;
    text-shadow: 3px 2px 3px rgba(0,0,0,0.7);
}

#pickLocHeader {
    width: 70%;
    margin: 0px;
    margin-left: 5%;
    text-align: center;
    font-size: 16pt;
    font-style: italic;
}

.tile-container {
    display: flex;
    flex-wrap: wrap;
}

.tile {
    width: 200px;
    height: 200px;
    background-color: white;
    border: 1px solid darkblue;
    border-radius: 5px;
    padding: 10px;
    margin: 10px;
    font-size: 1.4em;
}

a { text-decoration: none;  }

/* Page-sensitive tile styles */
.Crime {
    border: 3px solid darkblue;
    color: darkblue;
}

.Food {
    border: 3px solid darkred;
    color: darkred;
}

.Parks {
    border: 3px solid darkgreen;
    color: darkgreen;
}

.Property {
    border: 3px solid darkred;
    color: darkred;
}

.Concerts {
    border: 3px solid blue;
    color: blue;
}

.Hospitals {
    border: 3px solid black;
    color: black;
}

.Culture {
    border: 3px solid blue;
    color: blue;
}
.PublicArt {
    border: 3px solid darkviolet;
    color: darkviolet;
}

.WalkScore {
    border: 3px solid darkblue;
    color: darkblue;
}

.Schools {
    border: 3px solid forestgreen;
    color: forestgreen;
}

.Jobs {
    border: 3px solid goldenrod;
    color: goldenrod;
}

/* Style the tile links */
a.tile:visited { color: inherit; }


/* nav */
nav {
    box-sizing: border-box;
    height: 60px;
    width: 100%;
    position: fixed;
    top: 0px;
    padding: 3px;
    z-index: 9999;
    background-color: #24292e;
    color: #c8c9cb;
    font-weight: bold;
    text-align: left;
}

nav ul {
    box-sizing: border-box;
    list-style-type: none;  /* No list style in nav list */
    text-align: center;     /* Center each element */
    display: inline-block;  /* Display in-line */
    border: none;           /* Clear borders */
    width: 100%;            /* Extend nav bar 100% across page */
    padding-right: 40px;
}

nav a {
    padding: 5px;
}

nav a, #nav_active {
    border-radius: 5px;
    text-decoration: none;
    font-weight: bold;
}

#nav_active {
    color: black;
}

nav a:link { color: #c8c9cb; }
nav a:visited { color: white; }

.left { float: left; }
.right { float: right; }

/* Animations */
.tile:hover {
    background-color: gainsboro;
    box-shadow: 0px 0px 15px black;
    transition-duration: 0.4s;
    -webkit-transition-duration: 0.4s; /* Safari */
}

nav a:hover, #nav_active {
    background-color: gainsboro;
    color: black;
    box-shadow: 0px 0px 15px black;
    transition-duration: 0.4s;
    -webkit-transition-duration: 0.4s; /* Safari */
}

.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 80px;
    height: 80px;
    animation: spin 1s linear infinite;
}

.detail_loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 300px;
    height: 300px;
    margin-left: 20%;
    animation: spin 1s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

@keyframes hide_map {
    from { width: 100%;}
    to   { width: 0; }
}

@keyframes show_map {
    from { width: 0;}
    to   { width: 100%;}
}

@keyframes expand_left {
    from { width: 70%; }
    to   { width: 100%;}
}

@keyframes contract_left {
    from { width: 100%;}
    to   { width: 70%; }
}

@keyframes expand_right {
    from { width: 0;  }
    to   { width: 30%;}
}

@keyframes contract_right {
    from { width: 30%;}
    to   { width: 0;  }
}

#hide_map {
    float: right;
    color: black;
    width: 0;
    animation: hide_map 500ms 0s;
}

#show_map {
    float: right;
    background-color: #24292e;
    color: black;
    opacity: 0.8;
    width: 100%;
    border-radius: 5px;
    padding-left: 10px;
    padding-right: 10px;
    margin-top: 10px;
    animation: show_map 500ms 0s;
}

#right-content {
    width: 30%;
    float: right;
    color: black;
    animation: expand_right 500ms 0s;
}

#right-content-full {
    width: 0;
    float: right;
    color: black;
    animation: contract_right 500ms 0s;
}

#left-content {
    width: 70%;
    color: black;
    padding: 30px;
    padding-top: 0px;
    text-align: left;
    animation: contract_left 500ms 0s;
}

#left-content-full {
    width: 100%;
    color: black;
    padding: 30px;
    text-align: left;
    animation: expand_left 500ms 0s;
}

#button-toggle {
    padding: 10px 25px 10px 0;
    margin: 0 10px 0 10px;
    width: 10%;
    float: right;
    color: #c8c9cb;
    text-align: center;
}

.tooltip {
    position: relative;
    display: inline-block;
    font-weight: bold;
    /*border-bottom: 1px dotted black;*/
}

.tooltip .tooltiptext {
    visibility: hidden;
    width: 300px;
    background-color: #555;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 30%;
    margin-left: -60px;
    opacity: 0;
    transition: opacity 1s;
}

.tooltip .tooltiptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 30%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
}

/* ------------------
 styling for the tables
   ------------------   */
#hor-minimalist-b
{
    border-collapse: collapse;
    text-align: left;
}
#hor-minimalist-b th
{
    padding: 10px 8px;
    border-bottom: 2px solid #646464;
}
#hor-minimalist-b td
{
    border-bottom: 1px solid #d4d4d4;
    color: #5a5a5a;
    padding: 6px 8px;
}
#hor-minimalist-b tbody tr:hover td
{
    color: #232323;
}

/*circle around score numbers for walk score*/
.numberCircle {
    border-radius: 50%;

    width: 54px;
    height: 36px;
    padding: 8px;

    /*background: #fff;*/
    border: 2px solid #666;
    color: #666;
    text-align: center;

    font: 28px Arial, sans-serif;
}

